# nes-emulator

./: .gitignore  Cargo.toml  LICENSE  README.md  REVIEW.md  build.rs  nes-emulator-config.json  user_tests.md
.github/workflows/: ci.yml
assets/: Info.plist  install-linux.sh  nes-emulator.desktop
docs/: TODO_MAPPERS.md  accuracy.md  mappers.md  running-linux.md  running-macos.md  running-windows.md
docs/internals/: 01-architecture.md  02-cpu.md  03-ppu.md  04-apu.md  05-bus-timing-dma.md  06-cartridge-mappers.md  07-frontend.md  08-savestates.md  README.md
examples/: accuracy_rom.rs  boot_check.rs  framedump.rs
src/: apu.rs  audio.rs  bus.rs  cartridge.rs  config.rs  controller.rs  cpu.rs  font.rs  gamepad.rs  icon.rs  lib.rs  main.rs  mapper.rs  menu.rs  nes.rs  palette.rs  ppu.rs  savestate.rs
src/mapper/: action53.rs  axrom.rs  bandai74161.rs  bandai_fcg.rs  bnrom.rs  cnrom.rs  codemasters.rs  colordreams.rs  fme7.rs  gxrom.rs  h3001.rs  holydiver.rs  irem_g101.rs  jaleco_jf17.rs  mmc1.rs  mmc2.rs  mmc3.rs  mmc4.rs  mmc5.rs  n163.rs  namco108.rs  namco175_340.rs  nrom.rs  rambo1.rs  sunsoft1.rs  sunsoft3.rs  sunsoft4.rs  taito_tc0690.rs  txsrom.rs  unrom180.rs  uxrom.rs  vrc1.rs  vrc3.rs  vrc4.rs  vrc6.rs  vrc7.rs
tests/: accuracy_coin.rs  accuracycoin_rom.rs  boot_smoke.rs  holy_mapperel.rs  nestest.rs  rom_fuzz.rs  smb.rs
