[package]
name = "nes-emulator"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
winit = { version = "0.30", features = ["rwh_06", "serde"] }
pixels = "0.17"
cpal = "0.15"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.dev]
opt-level = 1
