[package]
name = "nes-emulator"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-or-later"

[features]
# Compile in the cycle/DMA/PPU trace logging (gated at runtime by the
# NES_*_LOG / NES_*_TRACE / NES_*_WATCH env vars). Off by default so release
# builds carry zero instrumentation cost in the hot paths.
trace = []

[dependencies]
winit = { version = "0.30", features = ["rwh_06", "serde"] }
pixels = "0.17"
cpal = "0.15"
rfd = "0.15"
gilrs = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.dev]
opt-level = 1
